--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Monney Tracker</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="app-container"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
