--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- <div id="app-container"></div> -->
-    <div id="app"></div>
+    <div id="app-container"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
