--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,99 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Monney Tracker</title>
-  </head>
-  <body>
-    <!-- <div id="app-container"></div> -->
-    <div id="app-container"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- <link
+            rel="preload"
+            href="/fonts/SFProDisplay-Regular.woff"
+            as="font"
+            type="font/woff"
+            crossorigin="anonymous"
+        /> -->
+        <style>
+            #curtain {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: #000;
+                z-index: 10;
+                transition: transform 0.3s ease-in-out;
+            }
+            #curtain.loaded {
+                transform: translateY(-100%);
+            }
+            .preloader-wrapper {
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+            .preloader {
+                width: 100px;
+                height: 100px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
+            .preloader-coin {
+                width: 50px;
+                height: 50px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 20px;
+                color: #f7f336;
+                border-radius: 50%;
+                border: 5px solid #f7b253;
+                background-color: #f7ce5a;
+                animation: bounceCoin 0.5s linear infinite;
+                font-family: SFProDisplay;
+                box-sizing: border-box;
+            }
+            .preloader-line {
+                width: 50px;
+                height: 5px;
+                background-color: #99a1b1;
+                border-radius: 3px;
+            }
+            @keyframes bounceCoin {
+                0% {
+                    transform: translate3d(0, 0px, 0);
+                    width: 50px;
+                }
+                50% {
+                    transform: translate3d(0, -10px, 0);
+                    width: 50px;
+                }
+                75% {
+                    transform: translate3d(0, 0px, 0);
+                    width: 55px;
+                }
+                85% {
+                    width: 60px;
+                }
+                100% {
+                    width: 50px;
+                }
+            }
+        </style>
+        <title>Monney Tracker</title>
+    </head>
+    <body>
+        <div id="app-container"></div>
+        <div id="curtain">
+            <div class="preloader-wrapper">
+                <div class="preloader">
+                    <div class="preloader-coin">$</div>
+                    <div class="preloader-line"></div>
+                </div>
+            </div>
+        </div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
